Added support for settings file

--- a/src/com/vistamaresoft/gps/messages.properties
+++ b/src/com/vistamaresoft/gps/messages.properties
@@ -18,7 +18,7 @@ Index0to9=GPS goto/wp: waypoint index must be an integer between
 Index1to9=GPS setwp: waypoint index must be an integer between 
 Init=GPS loaded successfully\! (version 
 InvalidCommand=Invalid GPS command: '
-TeleportDiabled=GPS got: teleport to waypoints is disabled
+TeleportDiabled=GPS goto: teleport to waypoints is disabled
 UndefinedWaypoint=GPS goto/wp: waypoint %d is undefined
 Waypoint.ListItem=%d: %s (%dN,%dE) h%d
 Waypoint.Short1=---°  
