--- a/assets/locale/messages_it.properties
+++ b/assets/locale/messages_it.properties
@@ -25,16 +25,22 @@
 023=MOSTRA\nWP
 024=Home
 025=[#00ff40]GPS Aiuto
-026=[#00ff40]/gps [#ffffff]apre il pannello di controllo del GPS
-027=[#00ff40]/gps on [#ffffff]accende il display del GPS
-028=[#00ff40]/gps off [#ffffff]spegne in display del GPS
-029=[#00ff40]/gps sethome [#ffffff]imposta le Home alla posizione attuale
-030=[#00ff40]/gps showhome [#ffffff]mostra/nasconde i dati dellaHome
-031=[#00ff40]/gps setwp [n] [nome] [#ffffff]imposta l’n-esimo wp con il nome 'nome'
-032=[#00ff40]/gps showwp <n> [#ffffff]mostra i dati del waypoint (n=0 per nascondere)
-033=[#00ff40]/gps list [#ffffff]elenca i waypoint definiti (inclusa home)
-034=[#00ff40]/gps home [#ffffff]teleporta a Home (se definita)
-035=[#00ff40]/gps goto <n> [#ffffff]teleporta all’n-esimo wp (se definito)
-036=[#00ff40]/home [#ffffff]uguale a '/gps home' (per compatibilità)
-037=[#00ff40]/sethome [#ffffff]uguale a '/gps sethome' (per compatiblità)
+026=[#00ff40]%s [#ffffff]apre il pannello di controllo del GPS
+027=[#00ff40]%s on [#ffffff]accende il display del GPS
+028=[#00ff40]%s off [#ffffff]spegne in display del GPS
+029=[#00ff40]%s sethome [#ffffff]imposta le Home alla posizione attuale
+030=[#00ff40]%s showhome [#ffffff]mostra/nasconde i dati dellaHome
+031=[#00ff40]%s setwp [n] [nome] [#ffffff]imposta l’n-esimo wp con il nome 'nome'
+032=[#00ff40]%s showwp <n> [#ffffff]mostra i dati del waypoint (n=0 per nascondere)
+033=[#00ff40]%s list [#ffffff]elenca i waypoint definiti (inclusa home)
+034=[#00ff40]%s home [#ffffff]teleporta a Home (se definita)
+035=[#00ff40]%s goto <n> [#ffffff]teleporta all’n-esimo wp (se definito)
+036=[#00ff40]/home [#ffffff]uguale a '%s home' (per compatibilità)
+037=[#00ff40]/sethome [#ffffff]uguale a '%s sethome' (per compatiblità)
 038=--[Undefined]--
+039=Chat '%s' per pannello di controllo
+040=Inserire il nome del nuovo waypoint e premere INVIO
+041=N
+042=E
+043=S
+044=W
