--- a/assets/locale/messages_en.properties
+++ b/assets/locale/messages_en.properties
@@ -25,16 +25,22 @@
 023=SHOW\nWP
 024=Home
 025=[#00ff40]GPS Help
-026=[#00ff40]/gps [#ffffff]opens the GPS GUI
-027=[#00ff40]/gps on [#ffffff]turns whole GPS display on
-028=[#00ff40]/gps off [#ffffff]turns whole GPS display off
-029=[#00ff40]/gps sethome [#ffffff]set home position to current position
-030=[#00ff40]/gps showhome [#ffffff]toggles home data display on/off
-031=[#00ff40]/gps setwp [n] [name] [#ffffff]sets n-th wpt with name 'name'
-032=[#00ff40]/gps showwp <n> [#ffffff]turns wpt display on (n=0 to turn off)
-033=[#00ff40]/gps list [#ffffff]lists defined waypoints (incl. home)
-034=[#00ff40]/gps home [#ffffff]teleports to home (if defined)
-035=[#00ff40]/gps goto <n> [#ffffff]teleports to n-th wp (if defined)
-036=[#00ff40]/home [#ffffff]same of '/gps home' (for compatibility)
-037=[#00ff40]/sethome [#ffffff]same as '/gps sethome' (for compatiblity)
+026=[#00ff40]%s [#ffffff]opens the GPS GUI
+027=[#00ff40]%s on [#ffffff]turns whole GPS display on
+028=[#00ff40]%s off [#ffffff]turns whole GPS display off
+029=[#00ff40]%s sethome [#ffffff]set home position to current position
+030=[#00ff40]%s showhome [#ffffff]toggles home data display on/off
+031=[#00ff40]%s setwp [n] [name] [#ffffff]sets n-th wpt with name 'name'
+032=[#00ff40]%s showwp <n> [#ffffff]turns wpt display on (n=0 to turn off)
+033=[#00ff40]%s list [#ffffff]lists defined waypoints (incl. home)
+034=[#00ff40]%s home [#ffffff]teleports to home (if defined)
+035=[#00ff40]%s goto <n> [#ffffff]teleports to n-th wp (if defined)
+036=[#00ff40]/home [#ffffff]same of '%s home' (for compatibility)
+037=[#00ff40]/sethome [#ffffff]same as '%s sethome' (for compatiblity)
 038=--[Undefined]--
+039=Chat '%s' for control panel
+040=Enter the name for the new waypoint and press ENTER
+041=N
+042=E
+043=S
+044=W
