Removed WP sharing; added targets; bug fixes, prepared for github

--- a/assets/locale/messages_it.properties
+++ b/assets/locale/messages_it.properties
@@ -1,46 +1,16 @@
-000=Comand GPS non valido: '
-001=GPS goto: teleport ai waypoints disabilitato
-002=GPS setwp: indice duplicato
-003=GPS setwp: nome duplicato
-004=GPS setwp: l’indice del waypoint deve essere un intero fra %1$d e %2$d
-005=GPS goto/wp: l’indice del waypoint deve essere un intero fra %1$d and %2$d
-006=GPS goto/wp: il waypoint %d non è definito
-007=GPS %s chiuso con successo!
-008=GPS %s caricato con successo!
-009=GPS: Punto home impostato.
-010=GPS - Waypoin definiti:
-011=GPS: Waypoint %1$d '%2$s' impostato.
-012=CHIUDI
-013=VAI\nA
-014=SPEGNI
-015=ACCENDI
-016=NASC.\nHOME
-017=IMPOSTA\nHOME
-018=MOSTRA\nHOME
-# Note the leading and trailing blanks in the following two entries!
-019=\ >\ 
-020=\ <\ 
-021=NASC.\nWP
-022=IMPOSTA\nWP
-023=MOSTRA\nWP
-024=Home
-025=[#00ff40]GPS Aiuto
-026=[#00ff40]%s [#ffffff]apre il pannello di controllo del GPS
-027=[#00ff40]%s on [#ffffff]accende il display del GPS
-028=[#00ff40]%s off [#ffffff]spegne in display del GPS
-029=[#00ff40]%s sethome [#ffffff]imposta le Home alla posizione attuale
-030=[#00ff40]%s showhome [#ffffff]mostra/nasconde i dati dellaHome
-031=[#00ff40]%s setwp [n] [nome] [#ffffff]imposta l’n-esimo wp con il nome 'nome'
-032=[#00ff40]%s showwp <n> [#ffffff]mostra i dati del waypoint (n=0 per nascondere)
-033=[#00ff40]%s list [#ffffff]elenca i waypoint definiti (inclusa home)
-034=[#00ff40]%s home [#ffffff]teleporta a Home (se definita)
-035=[#00ff40]%s goto <n> [#ffffff]teleporta all’n-esimo wp (se definito)
-036=[#00ff40]/home [#ffffff]uguale a '%s home' (per compatibilità)
-037=[#00ff40]/sethome [#ffffff]uguale a '%s sethome' (per compatiblità)
-038=--[Undefined]--
-039=Chat '%s' per pannello di controllo
-040=Inserire il nome del nuovo waypoint e premere INVIO
-041=N
-042=E
-043=S
-044=W
+000=GPS goto: il teletrasporto alle destinazioni è disabilitato
+001=GPS goto/wp: l’indice della destinazione deve essere un numero intero fra %1$d and %2$d
+002=GPS goto/wp: la destinazione %d non è definita
+003=GPS: Punto home impostato.
+004=GPS: Destinazione %1$d '%2$s' impostata.
+005=GPS: Punto home cancellato.
+006=GPS: Destinazione %d cancellata.
+007=Home
+008=--[Non definito]--
+009=Chat '%s' per pannello di controllo
+010=Nome destinazione
+011=Inserire il nome della nuova destinazione e premere INVIO
+012=N
+013=E
+014=S
+015=W
