--- a/assets/locale/messages_fr_CA.properties
+++ b/assets/locale/messages_fr_CA.properties
@@ -1,46 +1,16 @@
-000=Invalid GPS command: '
-001=GPS goto: teleport to waypoints is disabled.
-002=GPS setwp: duplicate index
-003=GPS setwp: duplicate name
-004=GPS setwp: waypoint index must be an integer between %1$d and %2$d
-005=GPS goto/wp: waypoint index must be an integer between %1$d and %2$d
-006=GPS goto/wp: waypoint %d is undefined
-007=GPS %s unloaded successfully!
-008=GPS %s loaded successfully!
-009=GPS: Home point set.
-010=GPS defined waypoints:
-011=GPS: Waypoint %1$d '%2$s' set.
-012=CLOSE
-013=GO\nTO
-014=TURN OFF
-015=TURN ON
-016=HIDE\nHOME
-017=SET\nHOME
-018=SHOW\nHOME
-# Note the leading and trailing blanks in the following two entries!
-019=\ >\ 
-020=\ <\ 
-021=HIDE\nWP
-022=SET\nWP
-023=SHOW\nWP
-024=Home
-025=[#00ff40]GPS Help
-026=[#00ff40]%s [#ffffff]opens the GPS GUI
-027=[#00ff40]%s on [#ffffff]turns whole GPS display on
-028=[#00ff40]%s off [#ffffff]turns whole GPS display off
-029=[#00ff40]%s sethome [#ffffff]set home position to current position
-030=[#00ff40]%s showhome [#ffffff]toggles home data display on/off
-031=[#00ff40]%s setwp [n] [name] [#ffffff]sets n-th wpt with name 'name'
-032=[#00ff40]%s showwp <n> [#ffffff]turns wpt display on (n=0 to turn off)
-033=[#00ff40]%s list [#ffffff]lists defined waypoints (incl. home)
-034=[#00ff40]%s home [#ffffff]teleports to home (if defined)
-035=[#00ff40]%s goto <n> [#ffffff]teleports to n-th wp (if defined)
-036=[#00ff40]/home [#ffffff]same of '%s home' (for compatibility)
-037=[#00ff40]/sethome [#ffffff]same as '%s sethome' (for compatiblity)
-038=--[Undefined]--
-039=Chat '%s' for control panel
-040=Enter the name for the new waypoint and press ENTER
-041=N
-042=E
-043=S
-044=W
+000=GPS goto: teleport to waypoints is disabled.
+001=GPS goto/wp: waypoint index must be an integer between %1$d and %2$d
+002=GPS goto/wp: waypoint %d is undefined
+003=GPS: Home point set.
+004=GPS: Waypoint %1$d '%2$s' set.
+005=GPS: Home point deleted.
+006=GPS: Waypoint %d deleted.
+007=Home
+008=--[Undefined]--
+009=Chat '%s' for control panel
+010=Waypoiny name
+011=Enter the name for the new waypoint and press ENTER
+012=N
+013=E
+014=S
+015=W
