German typing and UTF8 fix

--- a/assets/locale/messages_de.properties
+++ b/assets/locale/messages_de.properties
@@ -1,16 +1,16 @@
-000=GPS geh zu: teleport zu wegpunkt ist inaktiv.
-001=GPS geh zu/wp: wegpunkt index muss eine Zahl zwischen %1$d und %2$d
-002=GPS geh zu/wp: wegpunkt %d ist nicht vorhanden
-003=GPS: startpunkt setzen.
-004=GPS: wegpunkt %1$d '%2$s' gesetzt.
-005=GPS: Startpunkt geloescht.
-006=GPS: wegpunkt %d geloescht.
+000=GPS geh zu: Teleport zum Wegpunkt ist inaktiv.
+001=GPS geh zu/wp: Wegpunkt Index muss eine Zahl zwischen %1$d und %2$d
+002=GPS geh zu/wp: Wegpunkt %d ist nicht vorhanden
+003=GPS: Startpunkt setzen.
+004=GPS: Wegpunkt %1$d '%2$s' gesetzt.
+005=GPS: Startpunkt gelöscht.
+006=GPS: Wegpunkt %d gelöscht.
 007=Startpunkt
 008=--[Undefiniert]--
-009=Chat '%s' für Kontrolpanel
+009=Chat '%s' für Kontrollpanel
 010=Wegpunkt Name
-011=Trage einen Namen fuer den neuen Wegpunkt ein und druecke ENTER
+011=Trage einen Namen für den neuen Wegpunkt ein und drücke ENTER
 012=N
-013=E
+013=O
 014=S
 015=W
